Fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,15 @@ body {
   text-align: center;
   background: linear-gradient(#001d32, #000000);
   font-family: 'Times New Roman', Times, serif;
+  overflow-x: hidden;
 }
 
 .App {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
+  width: 100%;
 }
 
 .map {
@@ -101,8 +104,6 @@ header img {
 }
 
 .menu {
-  background: rgb(0,29,50);
-  background-image: linear-gradient(to bottom, #001c32, #01192d, #021728, #011323, #00101e);
   padding-bottom: 5%;
   display: flex;
   flex-direction: column;
@@ -162,7 +163,7 @@ header img {
   opacity: 30%; 
   height: auto;
   width: 10vw;
-  transform: rotate(-15deg);
+  transform: rotate(-10deg);
 }
 
 .leaf3 {
